# caslang

./: .gitignore  CMakeLists.txt  README.md  main.cpp  repro_issue.cas
Prompts/: CAS_Prompt.hpp
core/: ActionFSOps.h  ActionNumOps.h  ActionOps.h  ActionParser.h  ActionRunner.cpp  ActionRunner.h  ActionStringOps.h  ActionTimeOps.h  CasDictOps.h  CasExpression.h  CasFSOps.h  CasJsonOps.h  CasLang.cpp  CasLang.h  CasLangCode.cpp  CasLangCode.h  CasListOps.h  CasNumOps.h  CasOps.h  CasParser.h  CasRunner.cpp  CasRunner.h  CasSandboxOps.h  CasStringOps.h  CasTimeOps.h  CasToolOps.h
docs/: casLang-Spec-0.1.md  casLang-Spec-0.2.md  casLang-Spec-0.3.md  caslang-paper(2pages).tex  caslang-paper27.md  start_guide.md
filter/: AgentPrompts.h  CasFilter.cpp  CasFilter.h
filter/Prompts/: CAS_Prompt.hpp
log/: log.cpp  log.h
test/: 11_user_script.cas  comprehensive_v2.cas  run_continue_test.x  run_sandbox.py  run_stat_test.x  run_verification.x  test.cas  test_continue.cas  test_errors.py  test_import.py  test_sandbox.cas  test_stat.cas  verify_prompt.cas  verify_prompt_completeness.py  verify_v2.py
test/0_general/: 1_hello.cas  2_vars.cas  3_block_set.cas
test/1_flow/: 1_if.cas  2_loop.cas  3_retry.cas  4_copy.cas  5_early_return.cas
test/2_ops/: 10_dict_v2.cas  11_block_expand.cas  12_json_ops.cas  13_json_query.cas  1_str.cas  2_num.cas  3_fs.cas  3_fs_search.cas  4_time.cas  6_dict.cas  7_expr.cas  8_str_v2.cas  9_list.cas  test_perf.cas
test/4_intensive/: 1_benchmark.cas  2_line_count.cas  3_json_html_gen.cas
test/5_errors/: 1_missing_endif.cas  (+3 more)
(+14 files in other folders)
